[package]
name = "limtr"
version = "0.1.0"
edition = "2021"
authors = ["FssAy"]

[dependencies]
once_cell = "1.18.0"
chrono = "0.4.26"

[dependencies.blake3]
version = "1.4.1"
optional = true

[dependencies.tokio]
version = "1.29.1"
optional = true
features = [
    "sync",
    "rt-multi-thread",
]

[features]
default = ["async"]
hash = [
    "blake3",
]
async = [
    "tokio",
]
