[package]
name = "limtr"
version = "0.1.2"
edition = "2021"
authors = ["FssAy"]

[dependencies]
once_cell = "1.18.0"
chrono = "0.4.26"

[dependencies.tokio]
version = "1.29.1"
optional = true
features = [
    "sync",
    "rt-multi-thread",
    "test-util",
    "macros",
]

[features]
default = ["async"]
async = [
    "tokio",
]
