[package]
name = "limtr"
version = "0.1.7"
edition = "2021"
authors = ["FssAy"]
description = "Implement rate limits for all sort of applications and scenarios."
license = "GPL-3.0-only"
documentation = "https://docs.rs/limtr/latest/limtr/"
repository = "https://github.com/FssAy/limtr"

[dependencies]
once_cell = "1.18.0"
chrono = "0.4.26"

[dependencies.tokio]
version = "1.29.1"
optional = true
features = [
    "sync",
    "rt-multi-thread",
    "test-util",
    "macros",
]

[features]
default = ["async"]
async = [
    "tokio",
]
